Adding SVG label and adjusting margin bio section

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
             empolgante e contribuir para
             o sucesso da empresa que me acolher.</p>
         </div>
-        <div class="btn-group">
+       <div class="btn-group">
           <a class="card-button" href="URL_DO_SEU_ARQUIVO_PDF" download>
             <i class="fa-regular fa-file-pdf"></i> Download CV
           </a>
@@ -104,6 +104,7 @@
             <i class="fa-brands fa-linkedin"></i> LinkedIn
           </a>
         </div>
+        
       </div>
       <div class="box-container">
         <div class="heading">
@@ -111,7 +112,8 @@
           <div class="stack-icons">
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                viewBox="0 0 640 512" aria-labelledby="nodeTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <title id="nodeTitle">Node</title>
                 <style>
                   svg {
                     fill: #ffffff
@@ -123,7 +125,8 @@
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                viewBox="0 0 448 512" aria-labelledby="javascriptTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <title id="javascriptTitle">JavaScript</title>
                 <style>
                   svg {
                     fill: #ffffff
@@ -135,7 +138,8 @@
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                viewBox="0 0 448 512" aria-labelledby="pythonTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <title id="pythonTitle">Python</title>
                 <style>
                   svg {
                     fill: #ffffff
@@ -147,7 +151,8 @@
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                viewBox="0 0 384 512" aria-labelledby="htmlTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <title id="htmlTitle">HTML5</title>
                 <style>
                   svg {
                     fill: #ffffff
@@ -159,7 +164,8 @@
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                viewBox="0 0 384 512" aria-labelledby="cssTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <title id="cssTitle">CSS3</title>
                 <style>
                   svg {
                     fill: #ffffff
@@ -171,7 +177,8 @@
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                viewBox="0 0 512 512" aria-labelledby="reactTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <title id="reactTitle">React</title>
                 <style>
                   svg {
                     fill: #ffffff
@@ -183,7 +190,8 @@
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                viewBox="0 0 384 512" aria-labelledby="figmaTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <title id="figmaTitle">Figma</title>
                 <style>
                   svg {
                     fill: #ffffff
@@ -195,7 +203,8 @@
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                viewBox="0 0 448 512" aria-labelledby="gitTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <title id="gitTitle">GIT</title>
                 <style>
                   svg {
                     fill: #ffffff
@@ -207,7 +216,8 @@
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                viewBox="0 0 448 512" aria-labelledby="sqlTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <title id="sqlTitle">SQL</title>
                 <style>
                   svg {
                     fill: #ffffff
@@ -275,18 +285,18 @@
         <div class="card">
           <img class="card-img-top" src="./../images/portfolio3.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
+            <h5 class="card-title">Pizza Express</h5>
+            <p class="card-text">Pizza Express é um website fictício de cardápio de uma pizzaria que apresenta uma variedade de pizzas deliciosas.</p>
           </div>
           <div class="card-footer">
-            <p class="card-tag">Last updated 3 mins ago</p>
+            <span class="card-tag">HTML</span>
+            <span class="card-tag">CSS</span>
           </div>
           <div class="btn-group">
             <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar')" value="Github">
+              onclick="window.open('https://github.com/anamanuellar/pizza-menu')" value="Github">
             <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar')" value="Demo">
+              onclick="window.open('https://anamanuellar.github.io/pizza-menu/')" value="Demo">
           </div>
         </div>
         <div class="card">
