--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
           <h2 class="stack-title">Tecnologias que uso</h2>
           <div class="stack-icons">
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+              <svg xmlns="http://www.w3.org/2000/svg" width="1em"
                 viewBox="0 0 640 512" aria-labelledby="nodeTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="nodeTitle">Node</title>
                 <style>
