Adding projects and modal for credits

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
             o sucesso da empresa que me acolher.</p>
         </div>
        <div class="btn-group">
-          <a class="card-button" href="URL_DO_SEU_ARQUIVO_PDF" download>
+          <a class="card-button" href="../pdf/CV_Ana Manuella Ribeiro - Desenvolvedora Front End Júnior.pdf" download>
             <i class="fa-regular fa-file-pdf"></i> Download CV
           </a>
           <a class="card-button" href="https://www.linkedin.com/in/manu-ribeiro-dev/" target="_blank">
@@ -302,35 +302,37 @@
         <div class="card">
           <img class="card-img-top" src="./../images/portfolio4.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
+            <h5 class="card-title">Quizz</h5>
+            <p class="card-text">Este é um simples projeto de um quiz em JavaScript. Os usuários podem responder às perguntas e ver seus resultados.</p>
           </div>
           <div class="card-footer">
-            <p class="card-tag">Last updated 3 mins ago</p>
+            <span class="card-tag">HTML</span>
+            <span class="card-tag">CSS</span>
+            <span class="card-tag">JavaScript</span>
           </div>
           <div class="btn-group">
             <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar')" value="Github">
+              onclick="window.open('https://github.com/anamanuellar/Quizz-app')" value="Github">
             <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar')" value="Demo">
+              onclick="window.open('https://anamanuellar.github.io/Quizz-app/')" value="Demo">
           </div>
         </div>
         <div class="card">
           <img class="card-img-top" src="./../images/portfolio5.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
+            <h5 class="card-title">TODO - Lista de tarefas</h5>
+            <p class="card-text">Este é um simples aplicativo de lista de tarefas (TODO). Ele permite que você crie, marque como concluídas e remova tarefas da sua lista de afazeres.</p>
           </div>
           <div class="card-footer">
-            <p class="card-tag">Last updated 3 mins ago</p>
+            <span class="card-tag">HTML</span>
+            <span class="card-tag">CSS</span>
+            <span class="card-tag">JavaScript</span>
           </div>
           <div class="btn-group">
             <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar')" value="Github">
+              onclick="window.open('https://github.com/anamanuellar/TODO')" value="Github">
             <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar')" value="Demo">
+              onclick="window.open('https://anamanuellar.github.io/TODO/')" value="Demo">
           </div>
         </div>
         <div class="card">
@@ -377,6 +379,29 @@
   <footer>
     <div class="footer-content">
       <span>Todos os direitos reservados &copy; 2023</span>
+      <span class="separator-dot">&#8226;</span>
+      <a id="opModal"> Créditos</a> 
+
+<section id="modal" class="modal">
+  <div id="modalBg" class="modalBg"></div>
+  <div class="modalWrapper">
+    <div class="modalContents">
+      <h1 class="credit-title">
+        Créditos
+			</h1>
+      <ul class="credit">
+        <li class="credit-list">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew Jigalin</a></li>
+        <li class="credit-list">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a></li>
+        <li class="credit-list">Glow Effect (Hero): <a href="https://codersblock.com/blog/creating-glow-effects-with-css/"> Coders Block</a></li>
+        <li class="credit-list">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent Garreau</a></li>
+        <li class="credit-list">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
+      </ul>
+    </div>
+    <div id="clModal" class="clModal">
+      ×
+    </div>
+  </div>
+</section>  
 
     </div>
   </footer>
