aria-labeledby as SVG's atribute

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
             empolgante e contribuir para
             o sucesso da empresa que me acolher.</p>
         </div>
-       <div class="btn-group">
+        <div class="btn-group">
           <a class="card-button" href="../pdf/CV_Ana Manuella Ribeiro - Desenvolvedora Front End Júnior.pdf" download>
             <i class="fa-regular fa-file-pdf"></i> Download CV
           </a>
@@ -104,15 +104,15 @@
             <i class="fa-brands fa-linkedin"></i> LinkedIn
           </a>
         </div>
-        
+
       </div>
       <div class="box-container">
         <div class="heading">
           <h2 class="stack-title">Tecnologias que uso</h2>
           <div class="stack-icons">
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em"
-                viewBox="0 0 640 512" aria-labelledby="nodeTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <svg xmlns="http://www.w3.org/2000/svg" width="1em" viewBox="0 0 640 512"
+                aria-labelledby="nodeTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="nodeTitle">Node</title>
                 <style>
                   svg {
@@ -124,8 +124,8 @@
               </svg>
             </div>
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 448 512" aria-labelledby="javascriptTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"
+                aria-labelledby="javascriptTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="javascriptTitle">JavaScript</title>
                 <style>
                   svg {
@@ -137,8 +137,8 @@
               </svg>
             </div>
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 448 512" aria-labelledby="pythonTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"
+                aria-labelledby="pythonTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="pythonTitle">Python</title>
                 <style>
                   svg {
@@ -150,8 +150,8 @@
               </svg>
             </div>
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 384 512" aria-labelledby="htmlTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"
+                aria-labelledby="htmlTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="htmlTitle">HTML5</title>
                 <style>
                   svg {
@@ -163,8 +163,8 @@
               </svg>
             </div>
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 384 512" aria-labelledby="cssTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"
+                aria-labelledby="cssTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="cssTitle">CSS3</title>
                 <style>
                   svg {
@@ -176,8 +176,8 @@
               </svg>
             </div>
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 512 512" aria-labelledby="reactTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"
+                aria-labelledby="reactTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="reactTitle">React</title>
                 <style>
                   svg {
@@ -189,8 +189,8 @@
               </svg>
             </div>
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 384 512" aria-labelledby="figmaTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"
+                aria-labelledby="figmaTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="figmaTitle">Figma</title>
                 <style>
                   svg {
@@ -202,8 +202,8 @@
               </svg>
             </div>
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 448 512" aria-labelledby="gitTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"
+                aria-labelledby="gitTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="gitTitle">GIT</title>
                 <style>
                   svg {
@@ -215,8 +215,8 @@
               </svg>
             </div>
             <div>
-              <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 448 512" aria-labelledby="sqlTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"
+                aria-labelledby="sqlTitle"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <title id="sqlTitle">SQL</title>
                 <style>
                   svg {
@@ -286,7 +286,8 @@
           <img class="card-img-top" src="./../images/portfolio3.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Pizza Express</h5>
-            <p class="card-text">Pizza Express é um website fictício de cardápio de uma pizzaria que apresenta uma variedade de pizzas deliciosas.</p>
+            <p class="card-text">Pizza Express é um website fictício de cardápio de uma pizzaria que apresenta uma
+              variedade de pizzas deliciosas.</p>
           </div>
           <div class="card-footer">
             <span class="card-tag">HTML</span>
@@ -303,7 +304,8 @@
           <img class="card-img-top" src="./../images/portfolio4.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Quizz</h5>
-            <p class="card-text">Este é um simples projeto de um quiz em JavaScript. Os usuários podem responder às perguntas e ver seus resultados.</p>
+            <p class="card-text">Este é um simples projeto de um quiz em JavaScript. Os usuários podem responder às
+              perguntas e ver seus resultados.</p>
           </div>
           <div class="card-footer">
             <span class="card-tag">HTML</span>
@@ -321,7 +323,8 @@
           <img class="card-img-top" src="./../images/portfolio5.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">TODO - Lista de tarefas</h5>
-            <p class="card-text">Este é um simples aplicativo de lista de tarefas (TODO). Ele permite que você crie, marque como concluídas e remova tarefas da sua lista de afazeres.</p>
+            <p class="card-text">Este é um simples aplicativo de lista de tarefas (TODO). Ele permite que você crie,
+              marque como concluídas e remova tarefas da sua lista de afazeres.</p>
           </div>
           <div class="card-footer">
             <span class="card-tag">HTML</span>
@@ -380,28 +383,32 @@
     <div class="footer-content">
       <span>Todos os direitos reservados &copy; 2023</span>
       <span class="separator-dot">&#8226;</span>
-      <a id="opModal"> Créditos</a> 
+      <a id="opModal"> Créditos</a>
 
-<section id="modal" class="modal">
-  <div id="modalBg" class="modalBg"></div>
-  <div class="modalWrapper">
-    <div class="modalContents">
-      <h1 class="credit-title">
-        Créditos
-			</h1>
-      <ul class="credit">
-        <li class="credit-list">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew Jigalin</a></li>
-        <li class="credit-list">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a></li>
-        <li class="credit-list">Glow Effect (Hero): <a href="https://codersblock.com/blog/creating-glow-effects-with-css/"> Coders Block</a></li>
-        <li class="credit-list">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent Garreau</a></li>
-        <li class="credit-list">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
-      </ul>
-    </div>
-    <div id="clModal" class="clModal">
-      ×
-    </div>
-  </div>
-</section>  
+      <section id="modal" class="modal">
+        <div id="modalBg" class="modalBg"></div>
+        <div class="modalWrapper">
+          <div class="modalContents">
+            <h1 class="credit-title">
+              Créditos
+            </h1>
+            <ul class="credit">
+              <li class="credit-list">Inspiração: <a href="https://matthewjigalin-react-portfolio.netlify.app/"> Matthew
+                  Jigalin</a></li>
+              <li class="credit-list">Modal: <a href="https://codepen.io/i_garasi/pen/jOXwmVy"> CodePen Igarashi</a>
+              </li>
+              <li class="credit-list">Glow Effect (Hero): <a
+                  href="https://codersblock.com/blog/creating-glow-effects-with-css/"> Coders Block</a></li>
+              <li class="credit-list">Particles: <a href="https://vincentgarreau.com/particles.js/#nasa "> Vincent
+                  Garreau</a></li>
+              <li class="credit-list">SVG: <a href="https://fontawesome.com"> FontAwesome</a></li>
+            </ul>
+          </div>
+          <div id="clModal" class="clModal">
+            ×
+          </div>
+        </div>
+      </section>
 
     </div>
   </footer>
