Adjusting project and contact for 468px screen

--- a/src/index.html
+++ b/src/index.html
@@ -245,61 +245,56 @@
     <div class="card-group" id="portfolio">
       <div class="card-group-title">Projetos</div>
       <div class="card-deck">
-        <div class="card">
-          <img class="card-img-top" src="./../images/portfolio1.jpg" alt="HoobBank">
-          <div class="card-body">
-            <h5 class="card-title">HoobBank</h5>
-            <p class="card-text">O Projeto HoobBank é uma landing page totalmente responsiva que apresenta um banco
-              fictício. Este site foi desenvolvido utilizando uma interface UX/UI moderna em React JS com Tailwind.</p>
+          <!-- Primeiro Card -->
+          <div class="card">
+              <img class="card-img-top" src="./../images/portfolio1.jpg" alt="HoobBank">
+              <div class="card-body">
+                  <h5 class="card-title">HoobBank</h5>
+                  <p class="card-text">O Projeto HoobBank é uma landing page totalmente responsiva que apresenta um banco fictício. Este site foi desenvolvido utilizando uma interface UX/UI moderna em React JS com Tailwind.</p>
+              </div>
+              <div class="card-footer">
+                  <span class="card-tag">React</span>
+                  <span class="card-tag">Tailwind</span>
+              </div>
+              <div class="btn-group">
+                  <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar/HoobBankproject')" value="Github">
+                  <input type="button" class="card-button" target="blank" onclick="window.open('https://anamanuellar.github.io/HoobBankproject/')" value="Demo">
+              </div>
           </div>
-          <div class="card-footer">
-            <span class="card-tag">React</span>
-            <span class="card-tag">Tailwind</span>
+          <!-- Segundo Card -->
+          <div class="card">
+              <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Jogo da velha">
+              <div class="card-body">
+                  <h5 class="card-title">Jogo da Velha</h5>
+                  <p class="card-text">Este é um projeto de um jogo da velha simples criado com HTML, CSS e JavaScript. Design simples e intuitivo com alternância de jogador após cada jogada e detecção de vitória ou empate.</p>
+              </div>
+              <div class="card-footer">
+                  <span class="card-tag">HTML</span>
+                  <span class="card-tag">CSS</span>
+                  <span class="card-tag">JavaScript</span>
+              </div>
+              <div class="btn-group">
+                  <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar/Tic-tac-toe')" value="Github">
+                  <input type="button" class="card-button" target="blank" onclick="window.open('https://anamanuellar.github.io/Tic-tac-toe/')" value="Demo">
+              </div>
           </div>
-          <div class="btn-group">
-            <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar/HoobBankproject')" value="Github">
-            <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://anamanuellar.github.io/HoobBankproject/')" value="Demo">
+          <!-- Terceiro Card -->
+          <div class="card">
+              <img class="card-img-top" src="./../images/portfolio3.jpg" alt="Pizza Express">
+              <div class="card-body">
+                  <h5 class="card-title">Pizza Express</h5>
+                  <p class="card-text">Pizza Express é um website fictício de cardápio de uma pizzaria que apresenta uma variedade de pizzas deliciosas. A página apresenta várias pizzas com descrições detalhadas.</p>
+              </div>
+              <div class="card-footer">
+                  <span class="card-tag">HTML</span>
+                  <span class="card-tag">CSS</span>
+              </div>
+              <div class="btn-group">
+                  <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar/pizza-menu')" value="Github">
+                  <input type="button" class="card-button" target="blank" onclick="window.open('https://anamanuellar.github.io/pizza-menu/')" value="Demo">
+              </div>
           </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Jogo da velha">
-          <div class="card-body">
-            <h5 class="card-title">Jogo da Velha</h5>
-            <p class="card-text">Este é um projeto de um jogo da velha simples criado com HTML, CSS e JavaScript. Design
-              simples e intuitivo com alternância de jogador após cada jogada e detecção de vitória ou empate.</p>
-          </div>
-          <div class="card-footer">
-            <span class="card-tag">HTML</span>
-            <span class="card-tag">CSS</span>
-            <span class="card-tag">JavaScript</span>
-          </div>
-          <div class="btn-group">
-            <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar/Tic-tac-toe')" value="Github">
-            <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://anamanuellar.github.io/Tic-tac-toe/')" value="Demo">
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="./../images/portfolio3.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Pizza Express</h5>
-            <p class="card-text">Pizza Express é um website fictício de cardápio de uma pizzaria que apresenta uma
-              variedade de pizzas deliciosas.</p>
-          </div>
-          <div class="card-footer">
-            <span class="card-tag">HTML</span>
-            <span class="card-tag">CSS</span>
-          </div>
-          <div class="btn-group">
-            <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://github.com/anamanuellar/pizza-menu')" value="Github">
-            <input type="button" class="card-button" target="blank"
-              onclick="window.open('https://anamanuellar.github.io/pizza-menu/')" value="Demo">
-          </div>
-        </div>
+          <!-- Quarto Card -->
         <div class="card">
           <img class="card-img-top" src="./../images/portfolio4.jpg" alt="Card image cap">
           <div class="card-body">
@@ -319,6 +314,7 @@
               onclick="window.open('https://anamanuellar.github.io/Quizz-app/')" value="Demo">
           </div>
         </div>
+        <!-- Quinto Card -->
         <div class="card">
           <img class="card-img-top" src="./../images/portfolio5.jpg" alt="Card image cap">
           <div class="card-body">
@@ -338,6 +334,7 @@
               onclick="window.open('https://anamanuellar.github.io/TODO/')" value="Demo">
           </div>
         </div>
+        <!-- Sexto Card -->
         <div class="card">
           <img class="card-img-top" src="./../images/portfolio6.jpg" alt="Card image cap">
           <div class="card-body">
@@ -361,14 +358,16 @@
     <!-- contact section design -->
 
     <section class="contact-section" id="contact">
-      <div class="social-media">
+      <div class="contact-info">
         <h2 class="contact-title">Entre em contato</h2>
-        <ul class="social-icons">
-          <li><a href="https://wa.me/5571982593895"><i class="fa-brands fa-whatsapp"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/manu-ribeiro-dev/"><i class="fa-brands fa-github"></i></a></li>
-          <li><a href="https://www.instagram.com/rsmanu30/"><i class="fa-brands fa-instagram"></i></a></li>
-          <li><a href="mailto:ribeiro.anamanuella@gmail.com"><i class="fa-regular fa-envelope"></i></a></li>
-        </ul>
+        <div class="social-media">
+          <ul class="social-icons">
+            <li><a href="https://wa.me/5571982593895"><i class="fa-brands fa-whatsapp"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/manu-ribeiro-dev/"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://www.instagram.com/rsmanu30/"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="mailto:ribeiro.anamanuella@gmail.com"><i class="fa-regular fa-envelope"></i></a></li>
+          </ul>
+        </div>
       </div>
       <form>
         <input required name="name" type="text" class="contact-form" placeholder="Nome" />
@@ -377,6 +376,7 @@
         <input type="submit" value="Enviar" />
       </form>
     </section>
+    
   </main>
   <!-- footer design -->
   <footer>
