--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Portfolio</title>
 
   <!-- custom css -->
-  <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" href="./css/particles.css">
+  <link rel="stylesheet" href="./src/css/style.css" />
+  <link rel="stylesheet" href="./src/css/particles.css">
   <!-- Github Calendar -->
   <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
   <!-- Font Awesome -->
@@ -22,7 +22,7 @@
     <!-- header design -->
     <nav>
       <div class="logo">
-        <a href=""><img src="./../images/logo.svg" alt="logo" class="logo-image"></a>
+        <a href=""><img src="./images/logo.svg" alt="logo" class="logo-image"></a>
         <a href="" class="logo-title">Manu Ribeiro</a>
       </div>
 
@@ -45,7 +45,7 @@
       <div class="cover" id="home">
         <div class="profile-img">
           <div class="background-image">
-            <img src="./../images/home.png" alt="photo" class="profile-pic">
+            <img src="./images/home.png" alt="photo" class="profile-pic">
           </div>
         </div>
         <div class="intro-text">
@@ -97,7 +97,7 @@
             o sucesso da empresa que me acolher.</p>
         </div>
         <div class="btn-group">
-          <a class="card-button" href="../pdf/CV_Ana Manuella Ribeiro - Desenvolvedora Front End Júnior.pdf" download>
+          <a class="card-button" href="./pdf/CV_Ana Manuella Ribeiro - Desenvolvedora Front End Júnior.pdf" download>
             <i class="fa-regular fa-file-pdf"></i> Download CV
           </a>
           <a class="card-button" href="https://www.linkedin.com/in/manu-ribeiro-dev/" target="_blank">
@@ -247,7 +247,7 @@
       <div class="card-deck">
           <!-- Primeiro Card -->
           <div class="card">
-              <img class="card-img-top" src="./../images/portfolio1.jpg" alt="HoobBank">
+              <img class="card-img-top" src="./images/portfolio1.jpg" alt="HoobBank">
               <div class="card-body">
                   <h5 class="card-title">HoobBank</h5>
                   <p class="card-text">O Projeto HoobBank é uma landing page totalmente responsiva que apresenta um banco fictício. Este site foi desenvolvido utilizando uma interface UX/UI moderna em React JS com Tailwind.</p>
@@ -263,7 +263,7 @@
           </div>
           <!-- Segundo Card -->
           <div class="card">
-              <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Jogo da velha">
+              <img class="card-img-top" src="./images/portfolio2.jpg" alt="Jogo da velha">
               <div class="card-body">
                   <h5 class="card-title">Jogo da Velha</h5>
                   <p class="card-text">Este é um projeto de um jogo da velha simples criado com HTML, CSS e JavaScript. Design simples e intuitivo com alternância de jogador após cada jogada e detecção de vitória ou empate.</p>
@@ -280,7 +280,7 @@
           </div>
           <!-- Terceiro Card -->
           <div class="card">
-              <img class="card-img-top" src="./../images/portfolio3.jpg" alt="Pizza Express">
+              <img class="card-img-top" src="./images/portfolio3.jpg" alt="Pizza Express">
               <div class="card-body">
                   <h5 class="card-title">Pizza Express</h5>
                   <p class="card-text">Pizza Express é um website fictício de cardápio de uma pizzaria que apresenta uma variedade de pizzas deliciosas. A página apresenta várias pizzas com descrições detalhadas.</p>
@@ -296,7 +296,7 @@
           </div>
           <!-- Quarto Card -->
         <div class="card">
-          <img class="card-img-top" src="./../images/portfolio4.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./images/portfolio4.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Quizz</h5>
             <p class="card-text">Este é um simples projeto de um quiz em JavaScript. Os usuários podem responder às
@@ -316,7 +316,7 @@
         </div>
         <!-- Quinto Card -->
         <div class="card">
-          <img class="card-img-top" src="./../images/portfolio5.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./images/portfolio5.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">TODO - Lista de tarefas</h5>
             <p class="card-text">Este é um simples aplicativo de lista de tarefas (TODO). Ele permite que você crie,
@@ -336,7 +336,7 @@
         </div>
         <!-- Sexto Card -->
         <div class="card">
-          <img class="card-img-top" src="./../images/portfolio6.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./images/portfolio6.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -422,8 +422,8 @@
   <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
   </script>
   <!-- custom js -->
-  <script src="js/script.js"></script>
-  <script src="js/particles.js"></script>
+  <script src="./src/js/script.js"></script>
+  <script src="./src/js/particles.js"></script>
 </body>
 
 </html>
